Fix layout bug where paragraph filled multiple containers

--- a/css/site-custom/stylesheet.scss
+++ b/css/site-custom/stylesheet.scss
@@ -683,7 +683,7 @@ footer {
 
   // –––––––––––––––––––––––––––––––––––––––––––––––––– Tables ----------------------------------------------//
   table {
-    padding: 10px 0;
+    //padding: 4px 0;
     width: 100%;
   }
   td:nth-child(1){
